# Distributed-NeRF-Rendering

./: .gitignore  CMakeLists.txt  README.md  build.sh  fb-compile.sh  nerf_messages.fbs  requirements.txt  test_model.py  training.py  worker_node.py
NerfDistributed/: RayBatch.py  RenderResult.py
include/: camera_math.h  nerf_messages_generated.h
nerf_core/: model.py
